# GradientGenerator26

./: .gitignore  .taurignore  README.md  TAURI_SETUP.md  app.js  index.html  launch.sh  package.json  proxy.js  proxy.php  stop.sh  test-api-decrypt.js  test-decrypt-simple.js  test-decrypt.js  test-import.mjs
css/: CSS_ARCHITECTURE.md  base.css  canvas.css  components.css  ui-elements.css  utilities.css
lib/: api-key-decrypt.js  canvas-renderer.js  color-extraction.js  config.js.broken  config.js.example  image-control.js  image-search.js  palette-manager.js  ui.js
scripts/: README.md  build-debug.sh  build-production.sh  build-with-dmg.sh  clean-and-build.sh  clean.sh  dev.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
