[package]
name = "pxls-editor"
version = "1.0.0"
description = "PXLS Image Editor - Pexels image browser with K-means color extraction"
authors = ["Your Name"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-write-file", "dialog-save", "window-unminimize", "window-minimize", "window-hide", "window-start-dragging", "window-show", "window-maximize", "window-close", "window-unmaximize", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
